# esp-crsf-rx

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: ci.yml  release.yml
examples/basic/: CMakeLists.txt  sdkconfig.defaults
examples/basic/main/: main.c
include/: crsf_protocol.h  crsf_rx.h
src/: crsf_parser.c  crsf_parser.h  crsf_rx.c
test/: CMakeLists.txt  test_helpers.h  test_main.c  test_parser_fsm.c  test_unpack_channels.c  test_unpack_telemetry.c
test/include/: esp_attr.h
